tests/en/errors/empty_struct.salam
// EXPECT: E058
struct Empty:
end
func main: println("x") end
